[gd_scene load_steps=8 format=1]

[ext_resource path="res://scenario/coin.gd" type="Script" id=1]
[ext_resource path="res://tileset/tileset.png" type="Texture" id=2]
[ext_resource path="res://audio/Moeda.wav" type="Sample" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 8.0

[sub_resource type="Animation" id=2]

resource/name = "disapear"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 64, 112, 16, 16 ), Rect2( 80, 112, 16, 16 ), Rect2( 96, 112, 16, 16 ), Rect2( 112, 112, 16, 16 ), Rect2( 0, 0, 0, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("fx_sounds")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [ "coin_taken" ],
"method": "play"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("collision")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 1 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=3]

length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 112, 16, 16 ), Rect2( 16, 112, 16, 16 ), Rect2( 32, 112, 16, 16 ), Rect2( 48, 112, 16, 16 ) ]
}

[sub_resource type="SampleLibrary" id=4]

samples/coin_taken = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 3 )
}

[node name="coin" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="collision" type="CollisionShape2D" parent="."]

visibility/visible = false
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )
region = true
region_rect = Rect2( 0, 112, 16, 16 )

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/disapear = SubResource( 2 )
anims/rotating = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "rotating"

[node name="fx_sounds" type="SamplePlayer" parent="." groups=[
"fx_sound",
]]

config/polyphony = 8
config/samples = SubResource( 4 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="test_camera" type="Camera2D" parent="."]

visibility/visible = false
anchor_mode = 1
rotating = false
current = false
zoom = Vector2( 0.5, 0.5 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="test_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[connection signal="body_enter" from="." to="." method="_on_coin_body_enter"]

[connection signal="timeout" from="test_timer" to="." method="hit"]


